src/DaxStudio.UI/Grammars/Generated/xmSQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/dgosbell/source/repos/DaxStudio/src/DaxStudio.UI/Grammars/xmSQL.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace DaxStudio.UI.Grammars.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class xmSQLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SET=1, DEFINE=2, TABLE=3, CREATE=4, SHALLOW=5, RELATION=6, MANYTOMANY=7, 
		BOTH=8, REDUCED=9, BY=10, WITH=11, SELECT=12, FROM=13, LEFT=14, OUTER=15, 
		INNER=16, JOIN=17, ON=18, WHERE=19, IN=20, NIN=21, BETWEEN=22, AND=23, 
		AS=24, TO=25, ININDEX=26, REVERSE=27, BITMAP=28, SUM=29, COUNT=30, DCOUNT=31, 
		MIN=32, MAX=33, AVG=34, SUMSQR=35, COUNT_BIG=36, CALLBACKDATAID=37, ENCODECALLBACK=38, 
		CALLBACK=39, PFCASTCOALESCE=40, COALESCE=41, PFCAST=42, VAND=43, VOR=44, 
		EXPR_AT_REF=45, EXPR_REF=46, QUOTED_TABLE_NAME=47, BRACKETED_NAME=48, 
		QUOTED_STRING=49, NUMBER=50, ASSIGN=51, EQUALS=52, NOT_EQUALS=53, GREATER_THAN=54, 
		LESS_THAN=55, GREATER_EQUALS=56, LESS_EQUALS=57, LPAREN=58, RPAREN=59, 
		COMMA=60, SEMICOLON=61, PLUS=62, MINUS=63, STAR=64, SLASH=65, DOTDOT=66, 
		IDENTIFIER=67, WS=68, ANY_CHAR=69;
	public const int
		RULE_query = 0, RULE_statement = 1, RULE_setDirective = 2, RULE_defineTableStatement = 3, 
		RULE_reducedByStatement = 4, RULE_createShallowRelationStatement = 5, 
		RULE_relationModifier = 6, RULE_selectQueryStatement = 7, RULE_withClause = 8, 
		RULE_exprDefinition = 9, RULE_selectBody = 10, RULE_selectList = 11, RULE_selectItem = 12, 
		RULE_aggregationExpr = 13, RULE_callbackExpr = 14, RULE_aggFunction = 15, 
		RULE_fromClause = 16, RULE_joinClause = 17, RULE_joinType = 18, RULE_reverseBitmapJoin = 19, 
		RULE_onClause = 20, RULE_whereClause = 21, RULE_filterPredicate = 22, 
		RULE_coalesceFilter = 23, RULE_logicalOp = 24, RULE_comparisonOp = 25, 
		RULE_filterValue = 26, RULE_valueList = 27, RULE_truncationIndicator = 28, 
		RULE_tableColumnRef = 29, RULE_tableRef = 30, RULE_expression = 31, RULE_expressionAtom = 32, 
		RULE_functionCall = 33, RULE_expressionList = 34, RULE_expressionOp = 35;
	public static readonly string[] ruleNames = {
		"query", "statement", "setDirective", "defineTableStatement", "reducedByStatement", 
		"createShallowRelationStatement", "relationModifier", "selectQueryStatement", 
		"withClause", "exprDefinition", "selectBody", "selectList", "selectItem", 
		"aggregationExpr", "callbackExpr", "aggFunction", "fromClause", "joinClause", 
		"joinType", "reverseBitmapJoin", "onClause", "whereClause", "filterPredicate", 
		"coalesceFilter", "logicalOp", "comparisonOp", "filterValue", "valueList", 
		"truncationIndicator", "tableColumnRef", "tableRef", "expression", "expressionAtom", 
		"functionCall", "expressionList", "expressionOp"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "':='", "'='", null, "'>'", "'<'", "'>='", "'<='", "'('", 
		"')'", "','", "';'", "'+'", "'-'", "'*'", "'/'", "'..'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SET", "DEFINE", "TABLE", "CREATE", "SHALLOW", "RELATION", "MANYTOMANY", 
		"BOTH", "REDUCED", "BY", "WITH", "SELECT", "FROM", "LEFT", "OUTER", "INNER", 
		"JOIN", "ON", "WHERE", "IN", "NIN", "BETWEEN", "AND", "AS", "TO", "ININDEX", 
		"REVERSE", "BITMAP", "SUM", "COUNT", "DCOUNT", "MIN", "MAX", "AVG", "SUMSQR", 
		"COUNT_BIG", "CALLBACKDATAID", "ENCODECALLBACK", "CALLBACK", "PFCASTCOALESCE", 
		"COALESCE", "PFCAST", "VAND", "VOR", "EXPR_AT_REF", "EXPR_REF", "QUOTED_TABLE_NAME", 
		"BRACKETED_NAME", "QUOTED_STRING", "NUMBER", "ASSIGN", "EQUALS", "NOT_EQUALS", 
		"GREATER_THAN", "LESS_THAN", "GREATER_EQUALS", "LESS_EQUALS", "LPAREN", 
		"RPAREN", "COMMA", "SEMICOLON", "PLUS", "MINUS", "STAR", "SLASH", "DOTDOT", 
		"IDENTIFIER", "WS", "ANY_CHAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "xmSQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static xmSQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public xmSQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public xmSQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(xmSQLParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmSQLVisitor<TResult> typedVisitor = visitor as IxmSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 72;
				statement();
				}
				}
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 6678L) != 0) );
			State = 77;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DefineTableStatementContext defineTableStatement() {
			return GetRuleContext<DefineTableStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CreateShallowRelationStatementContext createShallowRelationStatement() {
			return GetRuleContext<CreateShallowRelationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReducedByStatementContext reducedByStatement() {
			return GetRuleContext<ReducedByStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectQueryStatementContext selectQueryStatement() {
			return GetRuleContext<SelectQueryStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SetDirectiveContext setDirective() {
			return GetRuleContext<SetDirectiveContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmSQLVisitor<TResult> typedVisitor = visitor as IxmSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DEFINE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79;
				defineTableStatement();
				}
				break;
			case CREATE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 80;
				createShallowRelationStatement();
				}
				break;
			case REDUCED:
				EnterOuterAlt(_localctx, 3);
				{
				State = 81;
				reducedByStatement();
				}
				break;
			case WITH:
			case SELECT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 82;
				selectQueryStatement();
				}
				break;
			case SET:
				EnterOuterAlt(_localctx, 5);
				{
				State = 83;
				setDirective();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetDirectiveContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SET() { return GetToken(xmSQLParser.SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(xmSQLParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(xmSQLParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QUOTED_STRING() { return GetToken(xmSQLParser.QUOTED_STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(xmSQLParser.SEMICOLON, 0); }
		public SetDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setDirective; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmSQLVisitor<TResult> typedVisitor = visitor as IxmSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSetDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SetDirectiveContext setDirective() {
		SetDirectiveContext _localctx = new SetDirectiveContext(Context, State);
		EnterRule(_localctx, 4, RULE_setDirective);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(SET);
			State = 87;
			Match(IDENTIFIER);
			State = 88;
			Match(EQUALS);
			State = 89;
			Match(QUOTED_STRING);
			State = 90;
			Match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefineTableStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(xmSQLParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TABLE() { return GetToken(xmSQLParser.TABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TableRefContext tableRef() {
			return GetRuleContext<TableRefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(xmSQLParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SelectBodyContext selectBody() {
			return GetRuleContext<SelectBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(xmSQLParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(xmSQLParser.SEMICOLON, 0); }
		public DefineTableStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defineTableStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmSQLVisitor<TResult> typedVisitor = visitor as IxmSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefineTableStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineTableStatementContext defineTableStatement() {
		DefineTableStatementContext _localctx = new DefineTableStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_defineTableStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(DEFINE);
			State = 93;
			Match(TABLE);
			State = 94;
			tableRef();
			State = 95;
			Match(ASSIGN);
			State = 96;
			selectBody();
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA || _la==SEMICOLON) {
				{
				State = 97;
				_la = TokenStream.LA(1);
				if ( !(_la==COMMA || _la==SEMICOLON) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReducedByStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REDUCED() { return GetToken(xmSQLParser.REDUCED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BY() { return GetToken(xmSQLParser.BY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TableRefContext tableRef() {
			return GetRuleContext<TableRefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(xmSQLParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SelectBodyContext selectBody() {
			return GetRuleContext<SelectBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(xmSQLParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(xmSQLParser.SEMICOLON, 0); }
		public ReducedByStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_reducedByStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmSQLVisitor<TResult> typedVisitor = visitor as IxmSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReducedByStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReducedByStatementContext reducedByStatement() {
		ReducedByStatementContext _localctx = new ReducedByStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_reducedByStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(REDUCED);
			State = 101;
			Match(BY);
			State = 102;
			tableRef();
			State = 103;
			Match(ASSIGN);
			State = 104;
			selectBody();
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMA || _la==SEMICOLON) {
				{
				State = 105;
				_la = TokenStream.LA(1);
				if ( !(_la==COMMA || _la==SEMICOLON) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateShallowRelationStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CREATE() { return GetToken(xmSQLParser.CREATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHALLOW() { return GetToken(xmSQLParser.SHALLOW, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RELATION() { return GetToken(xmSQLParser.RELATION, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TableRefContext tableRef() {
			return GetRuleContext<TableRefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(xmSQLParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TableColumnRefContext[] tableColumnRef() {
			return GetRuleContexts<TableColumnRefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableColumnRefContext tableColumnRef(int i) {
			return GetRuleContext<TableColumnRefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TO() { return GetToken(xmSQLParser.TO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RelationModifierContext[] relationModifier() {
			return GetRuleContexts<RelationModifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationModifierContext relationModifier(int i) {
			return GetRuleContext<RelationModifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(xmSQLParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(xmSQLParser.SEMICOLON, 0); }
		public CreateShallowRelationStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createShallowRelationStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IxmSQLVisitor<TResult> typedVisitor = visitor as IxmSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCreateShallowRelationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
